--- a/theme/css/main.css
+++ b/theme/css/main.css
@@ -64,6 +64,11 @@ h1.site-title + p {
     margin-top: -1.5rem;
 }
 
+h6 {
+    margin-left: 0.2em;
+    margin-top: -1.6em;
+}
+
 section.footer {
     border-top: 1px solid #bbb;
     margin-top: 3em;
