--- a/theme/css/main.css
+++ b/theme/css/main.css
@@ -12,31 +12,33 @@
    #9a1750 -- subheads
    #ee4c7c -- emphasis, sub-subs
 */
+@charset "UTF-8";
+html {
+    font-size: 18px;
+}
+
+a {
+    color: #5d001e;
+}
+
+a:visited {
+    color: #9a1750;
+}
+
 body {
     background-color: #eae7dc;
+    counter-reset: sidenote-counter;
+    font-family: 'Open Sans', serif;
+    line-height: 1.8em;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1400px;
+    padding-left: 12.5%;
+    width: 87.5%;
 }
 
 p {
     color: black;
-}
-
-h1 {
-    color: #5d001e;
-}
-
-article h1 {
-    color: #9a1750
-}
-
-
-/* Layout */
-body {
-    width: 87.5%;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 12.5%;
-    max-width: 1400px;
-    counter-reset: sidenote-counter;
 }
 
 hr {
@@ -49,7 +51,13 @@ hr {
 }
 
 h1 {
+    color: #5d001e;
+    font-family: 'Playfair Display SC', serif;
+    font-size: 48px;
     margin-top: 4rem;
+}
+article h1 {
+    color: #9a1750
 }
 
 section > p, 
@@ -61,12 +69,17 @@ h1.site-title {
 }
 
 h1.site-title + p {
-    margin-top: -1.5rem;
+    margin-top: -0.8rem;
 }
 
 h6 {
-    margin-left: 0.3em;
-    margin-top: -1.6em;
+    margin-left: 0.1em;
+    margin-top: -1.1em;
+}
+
+blockquote p {
+    margin-right: 40px;
+    width: 55%;
 }
 
 section.footer {
@@ -75,21 +88,6 @@ section.footer {
     margin-bottom: 3em;
     border-top: 1px solid #ccc;
     width: 55%;
-}
-
-/* Text */
-html {
-    font-size: 18px;
-}
-
-body {
-    font-family: 'Open Sans', serif;
-    line-height: 1.8em;
-}
-
-h1 {
-    font-family: 'Playfair Display SC', serif;
-    font-size: 48px;
 }
 
 article {
@@ -110,4 +108,14 @@ h1.site-title + p {
 section.footer {
     font-size: 14px;
     line-height: 1.8em;
+}
+
+blockquote p {
+    font-size: 1.1 rem;
+}
+
+blockquote footer {
+    width: 55%;
+    font-size: 1.1rem;
+    text-align: right;
 }
