--- a/css/main.css
+++ b/css/main.css
@@ -19,10 +19,11 @@ html {
 
 a {
     color: #5d001e;
+    text-decoration: none;
 }
 
 a:visited {
-    color: #9a1750;
+    /*color: #9a1750;*/
 }
 
 body {
@@ -57,7 +58,7 @@ h1 {
     margin-top: 4rem;
 }
 article h1 {
-    color: #9a1750
+    color: #9a1750;
 }
 
 section > p, 
@@ -65,6 +66,7 @@ section > footer,
 section > table { width: 55%; }
 
 h1.site-title {
+    color: #5d001e;
     margin-top: 10rem;
 }
 
@@ -98,6 +100,10 @@ article h1 {
     font-family: 'Playfair Display SC', serif;
     font-size: 34px;
     font-style: italic;
+}
+
+article h1 a {
+    color: #9a1750;
 }
 
 h1.site-title + p {
