--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@ a:visited {
 body {
     background-color: #eae7dc;
     counter-reset: sidenote-counter;
-    font-family: 'Open Sans', serif;
+    font-family: 'Open Sans', sans-serif;
     line-height: 1.8em;
     margin-left: auto;
     margin-right: auto;
