Improving responsive behavior. Tightening heading. Continuing with sidenotes and marginnotes.

--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,7 @@ section > table {
 
 h1.site-title {
   color: #5d001e;
+  letter-spacing: -0.1rem;
   margin-top: 10rem; }
 
 h1.site-title + p {
@@ -141,7 +142,7 @@ blockquote footer {
 .comments {
   margin-top: 40px; }
 
-.sidenote {
+.sidenote, .marginnote {
   float: right;
   clear: right;
   width: 50%;
@@ -152,6 +153,9 @@ blockquote footer {
   line-height: 1.85;
   vertical-align: baseline;
   position: relative; }
+
+.sidenote-number {
+  counter-increment: sidenote-counter; }
 
 .sidenote-number:after, .sidenote:before {
   font-family: Georgia, "Times New Roman", Times, serif;
@@ -171,6 +175,40 @@ blockquote footer {
   font-size: 0.8rem;
   top: -0.5rem; }
 
+input.margin-toggle {
+  display: none; }
+
+label.margin-toggle:not(.sidenote-number) {
+  display: none; }
+
+@media only screen and (min-device-width: 375px) and (max-device-width: 667px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
+  body {
+    width: 84%;
+    padding-left: 8%;
+    padding-right: 8%; }
+
+  hr, article,
+  blockquote p,
+  section.footer,
+  blockquote footer {
+    width: 100%; }
+
+  .sidenote, .marginnote {
+    display: none; }
+
+  label.margin-toggle:not(.sidenote-number) {
+    display: inline; }
+
+  .margin-toggle:checked + .sidenote,
+  .margin-toggle:checked + .marginnote {
+    display: block;
+    float: left;
+    left: 1rem;
+    clear: both;
+    width: 95%;
+    margin: 1rem 2.5%;
+    vertical-align: baseline;
+    position: relative; } }
 @media (max-width: 760px) {
   body {
     width: 84%;
@@ -183,5 +221,19 @@ blockquote footer {
   blockquote footer {
     width: 100%; }
 
-  .sidenote {
-    display: none; } }
+  .sidenote, .marginnote {
+    display: none; }
+
+  label.margin-toggle:not(.sidenote-number) {
+    display: inline; }
+
+  .margin-toggle:checked + .sidenote,
+  .margin-toggle:checked + .marginnote {
+    display: block;
+    float: left;
+    left: 1rem;
+    clear: both;
+    width: 95%;
+    margin: 1rem 2.5%;
+    vertical-align: baseline;
+    position: relative; } }
