--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,3 @@
-/* Colors
- * Current color palette:
- *
- * #5d001e -- dark, for headlines
- * #e3e2df -- light background color
- * #e3afbc -- highlight, alternate bg
- * #9a1750 -- subheads
- * #ee4c7c -- emphasis, sub-subs */
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,400i|Vollkorn+SC|Vollkorn:400,400i&display=swap");
 html {
   font-size: 18px; }
@@ -63,7 +55,8 @@ section > table {
 h1.site-title {
   color: #5d001e;
   letter-spacing: -0.1rem;
-  margin-top: 10rem; }
+  margin-top: 10rem;
+  margin-bottom: 1.4rem; }
 
 h1.site-title + p {
   margin-top: -0.8rem; }
@@ -187,6 +180,15 @@ input.margin-toggle {
 
 label.margin-toggle:not(.sidenote-number) {
   display: none; }
+
+nav.top {
+  position: absolute;
+  top: 0;
+  right: 40px; }
+
+nav.top li {
+  display: inline;
+  margin-left: 20px; }
 
 @media only screen and (min-device-width: 375px) and (max-device-width: 667px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
   body {
