--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,400i|Vollkorn+SC|Vollkorn:400,400i&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Space+Mono:400,400i&display=swap");
 html {
   font-size: 18px; }
 
@@ -45,13 +46,17 @@ article h1 {
   margin-bottom: 0.4rem;
   margin-top: 4rem; }
 
-article {
+article.post h1 {
   width: 55%; }
 
 section > p,
 section > footer,
-section > table {
-  width: 100%; }
+section > table,
+article.listing {
+  width: 55%; }
+
+.fullwidth {
+  width: 90%; }
 
 h1.site-title {
   color: #5d001e;
@@ -104,6 +109,7 @@ article h2 {
   font-size: 24px; }
 
 article table {
+  font-family: "Space Mono", monospace;
   border-collapse: collapse; }
 
 article th {
@@ -112,12 +118,12 @@ article th {
   text-align: left; }
 
 article td {
-  font-size: 16px;
-  padding: 6px;
+  font-size: 0.8rem;
+  padding: 2px;
   vertical-align: top; }
 
 article tr:nth-child(3n) {
-  border-bottom: 1px dashed #888; }
+  border-bottom: 1px dotted #888; }
 
 h1.site-title + p {
   font-size: 22px;
