Fixing site title line-height for mobile viewing.

--- a/css/main.css
+++ b/css/main.css
@@ -64,6 +64,7 @@ article.listing {
 h1.site-title {
   color: #5d001e;
   letter-spacing: -0.1rem;
+  line-height: 1.1rem;
   margin-top: 10rem;
   margin-bottom: 1.4rem; }
 
