--- a/css/main.css
+++ b/css/main.css
@@ -47,7 +47,7 @@ article p a {
 
 article h1 {
   color: #9a1750;
-  line-height: 1.4;
+  line-height: 2.5rem;
   margin-bottom: 0.4rem; }
 
 article.post h1 {
@@ -83,7 +83,7 @@ h3 {
 div.particulars {
   font-size: 14px;
   margin-left: 0.1em;
-  margin-top: -1.1em;
+  margin-top: -0.8em;
   margin-bottom: 1rem; }
 
 blockquote p {
