--- a/css/main.css
+++ b/css/main.css
@@ -194,7 +194,7 @@ label.margin-toggle:not(.sidenote-number) {
 nav.top {
   position: absolute;
   top: 0;
-  right: 40px; }
+  right: 12.5%; }
 
 nav.top li {
   display: block;
